# rusty-lake

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
cv/src/: chrono.rs  config.rs  gstate.rs  main.rs  terrain.rs
docs/: uefi.txt
hw/: Cargo.toml
hw/src/: main.rs
scheme/: Cargo.toml
scheme-frontend/: Cargo.toml  LICENSE_MIT
scheme-frontend/src/: lib.rs
scheme-frontend/www/: index.html  package-lock.json  package.json  vite.config.ts
scheme-frontend/www/src/: App.tsx
scheme-server/: Cargo.toml
scheme/src/: assembly_builder.rs  code_generator.rs  lib.rs  main.rs  value.rs
scheme/src/instruction/: memory_address.rs  mod.rs  mov.rs  movsd.rs  register.rs
scheme/src/interpreter/: environment.rs  interpreter.rs  mod.rs
scheme/src/lexer/: literal.rs  mod.rs
scheme/src/parser/: parser.rs
