[package]
name = "scheme-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
